# solana-forge

./: .env.example  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/forge-api/: Cargo.toml
crates/forge-api/src/: lib.rs
crates/forge-api/src/routes/: mod.rs  stats.rs  swaps.rs  transfers.rs  ws.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs
crates/forge-ingest/: Cargo.toml
crates/forge-ingest/src/: lib.rs  rpc.rs  websocket.rs
crates/forge-parse/: Cargo.toml
crates/forge-parse/src/: decoder.rs  lib.rs  types.rs
crates/forge-parse/src/programs/: balance_diff.rs  mod.rs  token.rs
crates/forge-store/: Cargo.toml
crates/forge-store/src/: lib.rs  models.rs  queries.rs
migrations/: 001_initial.sql  002_indexes.sql
